# grazelang

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  todo_tracker.json
.github/workflows/: todo_action.yml  todos_as_issues.yml
examples/: example_code.graze  example_code_2.graze  get_item.graze  proc.graze
grazelang/: Cargo.toml  main.graze  test.sb3
grazelang/schemas/: .gitignore  toolbox_schema.json
grazelang/src/: cast.rs  codegen.rs  eval.rs  lexer.rs  lib.rs  library.rs  main.rs  messages.rs  names.rs  parser.rs  settings.rs  string_unescape.rs  test.graze  test2.graze  visitor.rs  zipper.rs
grazelang/src/cli/: input.rs
grazelang/src/codegen/: core.rs  ids.rs  project_json.rs
grazelang/src/eval/: call.rs  cast.rs  ops.rs
grazelang/src/parser/: ast.rs  context.rs  core.rs  cst.rs  parse_context.rs
grazelang_library/: Cargo.toml
grazelang_library/src/: lib.rs  project_json.rs
grazelang_library_parser/: Cargo.toml
grazelang_library_parser/src/: lib.rs  parser.rs
grazelang_types/: Cargo.toml
grazelang_types/src/: lib.rs  project_json.rs
src/: lexer.rs  lib.rs  main.rs  names.rs  parser.rs  visitor.rs
src/codegen/: core.rs  ids.rs  project_json.rs
src/parser/: ast.rs  core.rs  internal.rs  parse_context.rs  parser.rs
todo_action/: __main__.py  syntax.json
