[package]
name = "grazelang"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
arcstr = { version = "1.2.0", features = ["serde"] }
regex = "1.12.3"
rand = "0.10.1"
rand_xoshiro = "0.8.0"
thiserror = "2.0.18"
grazelang_library_parser = { path = "../grazelang_library_parser" }
grazelang_library = { path = "../grazelang_library" }
md5 = "0.8.0"

[features]
default = ["use_actual_defaults_everywhere"]
use_shadows_for_formatted_strings = []
use_actual_defaults_for_formatted_strings = ["use_shadows_for_formatted_strings"]
use_actual_defaults_everywhere = ["use_actual_defaults_for_formatted_strings"]
