[package]
name = "grazelang"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
arcstr = { version = "1.2.0", features = ["serde"] }
regex = "1.12.4"
rand = "0.10.1"
rand_xoshiro = "0.8.1"
thiserror = "2.0.18"
grazelang_library_parser = { path = "../grazelang_library_parser" }
grazelang_library = { path = "../grazelang_library" }
md5 = "0.8.0"
zip = "8.6.0"
enum-assoc = "1.3.0"
clap = { version = "4.6.1", features = ["derive"] }

[features]
default = ["include_context_in_parse_errors"]
include_context_in_parse_errors = []
